# imMinipro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mingw-toolchain.cmake
cmake-toolchain/: toolchain-mingw.cmake
src/: main.cpp  main.hpp
src/menubar/: mainmenubar.cpp  mainmenubar.hpp
src/modals/: generate-chip.cpp  generate-chip.hpp  modals.cpp  modals.hpp  update-firmware.cpp  update-firmware.hpp
src/modals/about/: about-imMini.cpp  about-imMini.hpp  about-imgui.cpp  about-imgui.hpp  about-minipro.cpp  about-minipro.hpp  about-nativefiledialog.cpp  about-nativefiledialog.hpp
src/modals/programmer/: programmer-read.cpp  programmer-read.hpp  programmer-write.cpp  programmer-write.hpp
src/usb/: usb-handler.cpp  usb-handler.hpp
src/windows/: uiwindow.cpp  uiwindow.hpp  windowmanager.cpp  windowmanager.hpp  windows.cpp  windows.hpp
src/windows/device-list/: device-list.cpp  device-list.hpp
src/windows/manage-programmer/: manage-programmer.cpp  manage-programmer.hpp
src/windows/settings/: settings.cpp  settings.hpp
